_sass/forms.scss
.button a,
input[type='submit'] {
  -webkit-border-radius: 0;
  background: transparent;
  border-radius: 10px;
  border: 1px solid cornflowerblue;
  color: white;
  cursor: pointer;
  display: inline-block;
  font-weight: bold;
  padding: 1em;
  text-align: center;
  text-decoration: none;
  width: auto;

  &:hover {
    // background: $brand-color;
    border: none;
    color: #fff;
    cursor: pointer;
  }
}

.button a.alt,
input[type='submit'] {
  @include background;
  color: white;
  display: block;
  // font-family: Helvetica Neue, sans-serif;
  font-size: 1em;
  font-weight: 400;
  letter-spacing: 2px;
  margin-bottom: 15px;
  text-shadow: none;

  &:hover {
    background: $brand-secondary-color;
  }

  @media #{$tablet} {
    // display: inline-block;
  }

  &:hover {
    background: $brand-color;
    color: #fff;
    cursor: pointer;
  }
}

.cta.button {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin-top: 5vh;
}

textarea,
input,
button,
select {
  font-family: inherit;
  font-size: inherit;
}

input[type='submit'] {
  margin: 40px auto;
  background: white;
  color: $brand-secondary-color;
  font-weight: 700;
  border-radius: 10px;
  border: 3px solid cornflowerblue;
}

label,
input,
textarea {
  box-sizing: border-box;
  display: block;
  font-weight: bold;
  text-align: left;
  width: 100%;
}

textarea {
  resize: vertical;
  height: 150px;
}

label {
  margin: 20px 0 8px 0;
}

input,
textarea {
  padding: 10px;
  font-size: 1em;
}

input,
textarea {
  outline: none;
  border: 1px solid #dddddd;
}

input[type='text']:focus,
input[type='email']:focus,
input[type='password']:focus,
textarea:focus {
  box-shadow: 0 0 5px $brand-color;
  border: 1px solid $brand-color;
}

